# tasks

./: .gitignore  README.md
.github/workflows/: api.yml  destroy.yml  infrastructure.yml  ui.yml
infrastructure/: cf_tasks.yml
services/tasks_api/: .env.development  create_dynamodb_locally.py  main.py  package-lock.json  package.json  pyproject.toml  run_local.sh  schemas.py  serverless.yml  store.py  tests.py
services/tasks_ui/: index.html  package-lock.json  serverless.yml
services/tasks_ui/src/: App.vue  Footer.vue  aws-exports.js
