[tool.poetry]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = ["fadialsalti <eng_fadi77@hotmail.com>"]
readme = "README.md"
packages = [{include = "tasks_api"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
